--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
 		<!-- 插件 -->
 		<plugins>
 			<!-- maven-eclipse插件 -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-eclipse-plugin</artifactId> -->
-<!-- 				<version>2.9</version> -->
-<!-- 			</plugin> -->
+ 			<plugin>
+ 				<groupId>org.apache.maven.plugins</groupId>
+ 				<artifactId>maven-eclipse-plugin</artifactId>
+ 				<version>2.9</version>
+ 			</plugin>
 
 			<!-- 打包插件 -->
 <!-- 			<plugin> -->
