--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,7 +1,7 @@
 postgresql.jdbc.driver=org.postgresql.Driver
-postgresql.jdbc.url=jdbc:postgresql://127.0.0.1:5432/dev
-postgresql.jdbc.username=dev
-postgresql.jdbc.password=123456
+postgresql.jdbc.url=jdbc:postgresql://127.0.0.1:5432/activiti
+postgresql.jdbc.username=postgres
+postgresql.jdbc.password=postgres
 initialSize=5
 maxActive=50
 minIdle=5
